--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to My Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meher Bhaskar Madiraju</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my website hosted on GitHub Pages!</p>
+    <div class="container">
+        <header class="text-center my-5">
+            <h1>Welcome to My Profile Page!</h1>
+            <p>Hello! I'm Meher Bhaskar Madiraju, a Data Scientist at Walmart Global Tech based in Bentonville, Arkansas.</p>
+        </header>
+        
+        <section class="mb-5">
+            <h2>About Me</h2>
+            <p>I have a Master's in Analytics from Georgia Tech and a Bachelor's in Computer Science. My passion lies in data analysis and machine learning, and I'm constantly exploring new technologies to enhance my skills.</p>
+        </section>
+
+        <section class="mb-5">
+            <h2>Work Experience</h2>
+            <ul>
+                <li><strong>Data Scientist at Walmart Global Tech</strong> (July 2023 - Present)</li>
+                <li><strong>Senior Data Scientist at Merkle</strong> (May 2022 - July 2023)</li>
+                <li><strong>Data Scientist at Merkle</strong> (July 2020 - April 2022)</li>
+                <li><strong>Analytics Consultant at Merkle</strong> (January 2020 - July 2020)</li>
+            </ul>
+        </section>
+
+        <section class="mb-5">
+            <h2>Skills</h2>
+            <ul>
+                <li>Python, PySpark</li>
+                <li>Machine Learning, Data Analysis</li>
+                <li>Jupyter Notebooks, Pandas</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Contact Me</h2>
+            <p>You can reach me at <a href="mailto:meherbhaskar.madiraju@gmail.com">meherbhaskar.madiraju@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/meherbhaskar" target="_blank">LinkedIn</a>.</p>
+        </section>
+
+        <footer class="text-center mt-5">
+            <p>Thank you for visiting my profile!</p>
+        </footer>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
