--- a/index.html
+++ b/index.html
@@ -10,41 +10,60 @@
 <body>
     <div class="container">
         <header class="text-center my-5">
-            <h1>Welcome to My Profile Page!</h1>
-            <p>Hello! I'm Meher Bhaskar Madiraju, a Data Scientist at Walmart Global Tech based in Bentonville, Arkansas.</p>
+            <h1 class="display-4">Meher Bhaskar Madiraju</h1>
+            <p class="lead">Atlanta, Georgia, USA</p>
+            <p>Ph: +1 470-917-7249 | <a href="mailto:meherbhaskar.madiraju@gmail.com">meherbhaskar.madiraju@gmail.com</a> | <a href="https://linkedin.com/in/meherbhaskar" target="_blank">LinkedIn</a></p>
         </header>
         
         <section class="mb-5">
-            <h2>About Me</h2>
-            <p>I have a Master's in Analytics from Georgia Tech and a Bachelor's in Computer Science. My passion lies in data analysis and machine learning, and I'm constantly exploring new technologies to enhance my skills.</p>
+            <h2 class="text-primary">Technical Experience</h2>
+            
+            <h3 class="text-secondary">Data Scientist</h3>
+            <h4>Walmart Global Tech, Atlanta, GA</h4>
+            <h5>July 2023 — Present</h5>
+            <p>At Walmart, I focus on enhancing forecasting models that improve accuracy and drive strategic business decisions. I have implemented systems to align machine learning outputs with business constraints, ensuring reliable results for stakeholders.</p>
+
+            <h3 class="text-secondary">Senior Analyst</h3>
+            <h4>Ugam Solutions Inc., Atlanta, GA</h4>
+            <h5>May 2022 — July 2023</h5>
+            <p>In this role, I developed automated data pipelines and machine learning models that processed large datasets to identify key sales drivers and customer insights. My work included building a scalable NLP pipeline and a robust time series framework that significantly improved forecasting accuracy.</p>
+
+            <h3 class="text-secondary">Analyst</h3>
+            <h4>Ugam Solutions Inc., Bengaluru, India</h4>
+            <h5>July 2020 — May 2022</h5>
+            <p>I created numerous customer segmentation models to enhance acquisition strategies and optimized marketing spend through media channel analysis. Additionally, I designed frameworks to mitigate biases in machine learning models and developed automated dashboards for campaign performance tracking.</p>
+
+            <h3 class="text-secondary">Consultant</h3>
+            <h4>Ugam Solutions Inc., Bengaluru, India</h4>
+            <h5>January 2020 — July 2020</h5>
+            <p>I automated reporting processes to assess the impact of Covid-19 on KPIs and developed a customer attrition model that successfully improved retention rates.</p>
+
+            <h3 class="text-secondary">Summer Intern</h3>
+            <h4>Ugam Solutions, Bengaluru, India</h4>
+            <h5>May 2019 — July 2019</h5>
+            <p>During my internship, I developed a forecasting model for customer purchase behavior, which enhanced personalized email campaigns and improved engagement metrics.</p>
         </section>
 
         <section class="mb-5">
-            <h2>Work Experience</h2>
+            <h2 class="text-primary">Skills</h2>
             <ul>
-                <li><strong>Data Scientist at Walmart Global Tech</strong> (July 2023 - Present)</li>
-                <li><strong>Senior Data Scientist at Merkle</strong> (May 2022 - July 2023)</li>
-                <li><strong>Data Scientist at Merkle</strong> (July 2020 - April 2022)</li>
-                <li><strong>Analytics Consultant at Merkle</strong> (January 2020 - July 2020)</li>
-            </ul>
-        </section>
-
-        <section class="mb-5">
-            <h2>Skills</h2>
-            <ul>
-                <li>Python, PySpark</li>
-                <li>Machine Learning, Data Analysis</li>
-                <li>Jupyter Notebooks, Pandas</li>
+                <li><strong>Programming:</strong> Python, PySpark, R, SQL</li>
+                <li><strong>Data Science Tools:</strong> NumPy, Pandas, SciPy, Scikit-learn, Keras, TensorFlow, PyTorch, Tableau</li>
+                <li><strong>Cloud Services:</strong> AWS, Google Cloud Platform</li>
+                <li><strong>Other:</strong> Natural Language Processing (NLP), Deep Learning, Machine Learning (ML), Statistical Modeling, Time Series Analysis, Big Data</li>
             </ul>
         </section>
 
         <section>
-            <h2>Contact Me</h2>
-            <p>You can reach me at <a href="mailto:meherbhaskar.madiraju@gmail.com">meherbhaskar.madiraju@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/meherbhaskar" target="_blank">LinkedIn</a>.</p>
+            <h2 class="text-primary">Education</h2>
+            <ul>
+                <li><strong>Master of Science in Analytics</strong>, Georgia Institute of Technology (2022 - 2024)</li>
+                <li><strong>Bachelor of Technology in Computer Science and Engineering</strong>, Manipal Institute of Technology (2016 - 2020)</li>
+            </ul>
         </section>
 
         <footer class="text-center mt-5">
-            <p>Thank you for visiting my profile!</p>
+            <p>&copy; 2024 Meher Bhaskar Madiraju. Thank you for visiting my profile!</p>
         </footer>
     </div>
 
