--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2 class="text-primary">Technical Experience</h2>
             
             <h3 class="text-secondary">Data Scientist</h3>
-            <h4>Walmart Global Tech, Atlanta, GA</h4>
+            <h4>Walmart Global Tech, Bentonville, AR</h4>
             <h5>July 2023 — Present</h5>
             <p>At Walmart, I focus on enhancing forecasting models that improve accuracy and drive strategic business decisions. I have implemented systems to align machine learning outputs with business constraints, ensuring reliable results for stakeholders.</p>
 
